--- a/styleform.css
+++ b/styleform.css
@@ -136,7 +136,7 @@ textarea#msg {
 input.envoyer {
     font-weight: bold;
     background-color: rgba(16, 16, 80, 0.849);
-    border: 1xp solid rgba(5, 5, 48, 0.651);
+    border: 1px solid rgba(5, 5, 48, 0.651);
     color: white;
     width: 150px;
     height: 50px;
