--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@ a:hover {
     color: rgb(70, 0, 128);
     font-weight: bold;
 }
+a {
+    text-decoration:none;
+    }
+   
+a { color: #d25976; }
+    .plus { color: #d25976;}
+
 main{
     
     margin-left: 150px;
@@ -454,10 +461,6 @@ div.illustration2 img{
 }
 
 
-
-
-
-
 fieldset {
     position: relative;
     height: 80vh;
@@ -524,10 +527,11 @@ textarea#msg {
 
 }
 
-.bouton {
+.submit {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    
 }
 
 input.envoyer {
@@ -538,5 +542,27 @@ input.envoyer {
     width: 150px;
     height: 50px;
     padding: 5px;
-    margin-bottom: 50px;
+    margin-left: 800px;
+}
+
+.envoyer {
+    background-color: #4CAF50; 
+    color: white;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 4px; 
+    cursor: pointer; 
+  }
+
+  input.envoyer:hover {
+    background-color: #3e8e41;
+  }
+
+  input.envoyer:active {
+    background-color: #1e5227;
+  }
+
+.input22 {
+    width: 50%;
+    box-sizing: border-box;
 }
